<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_update_login_data"
    tools:context="com.example.carolsusieo.anniebank.UpdateLoginDataActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_info" />

    <LinearLayout android:id="@+id/uname_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="horizontal">

        <TextView android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            />

        <EditText
            android:id="@+id/fld_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_username"
            android:inputType="text"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/pwd_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/uname_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            />

        <EditText
            android:id="@+id/fld_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_pwd"
            android:inputType="text|textPassword"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/pwd2_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd2"
            />

        <EditText
            android:id="@+id/fld_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_pwd"
            android:inputType="text|textPassword"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/website_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd2_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/web1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_web1"
            />

        <EditText
            android:id="@+id/fld_web1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_web1"
            android:inputType="text"
            />

     </LinearLayout>

    <CheckBox android:id="@+id/checkbox_use_web1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/website_block"
        android:text="@string/useWebsite1"
        android:onClick="onCheckboxClicked"/>

    <LinearLayout android:id="@+id/website2_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_use_web1"
        android:orientation="horizontal">


        <TextView android:id="@+id/web2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_web2"
            />

        <EditText
            android:id="@+id/fld_web2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_web2"
            android:inputType="text"
            />
    </LinearLayout>




    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/website2_block"
        android:text="@string/lbl_login"
        />

    <Button
        android:id="@+id/btn_login_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/website2_block"
        android:text="@string/lbl_login_test"
        android:layout_toRightOf="@+id/btn_login"
        android:layout_toEndOf="@+id/btn_login"
        />

    <TextView android:id="@+id/loginErrorReason"
        android:layout_below="@id/btn_login_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        />


</RelativeLayout>
