<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_input_transaction"
    tools:context="com.example.carolsusieo.anniebank.InputTransaction">


    <TextView
        android:id="@+id/inputTran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_tran" />

    <LinearLayout android:id="@+id/tran_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputTran"
        android:orientation="horizontal">

        <TextView android:id="@+id/tran_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_tran_desc"
            />

        <EditText
            android:id="@+id/fld_tran_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_fld_tran_desc"
            android:inputType="text"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/amt_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tran_block"
        android:orientation="horizontal">

        <TextView android:id="@+id/amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_amt"
            />

        <EditText
            android:id="@+id/fld_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_fld_enter_amt"
            android:inputType="numberDecimal"
            />

    </LinearLayout>

    <LinearLayout android:id="@+id/btn_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/amt_block"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_send"
            />

        <Button
            android:id="@+id/btn_another"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_another"
            android:layout_toRightOf="@+id/btn_send"
            />
    </LinearLayout>


</RelativeLayout>
