<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_annie_bank"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login_main"
        android:layout_below="@id/txt_annie_bank"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/logindata_label"
        android:onClick="logindata" />

    <TextView
        android:id="@+id/txt_wifi_available"
        android:text="@string/content_wifi"
        android:layout_below="@id/btn_login_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_view_account"
        android:layout_below="@id/txt_wifi_available"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/view_account"
        android:onClick="viewaccount" />

    <Button
        android:id="@+id/btn_update_account"
        android:layout_below="@id/btn_view_account"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/update_account"
        android:onClick="updateaccount" />


</RelativeLayout>
