<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.carolsusieo.anniebank.GetAccountTotal">

    <Button
        android:id="@+id/btn_get_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GetBalance"
        />


    <TextView
        android:id="@+id/commResult"
        android:text="@string/lbl_comm"
        android:layout_below="@+id/btn_get_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/commResultValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/commResultValue"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/balanceResult"
        android:text="@string/lbl_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/balanceResultValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/balanceResultValue"
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/commResultValue"
        android:layout_alignLeft="@+id/commResultValue"
        android:layout_alignStart="@+id/commResultValue" />


</RelativeLayout>
